# clutter

./: Makefile.am  NEWS  README.in  config.h.win32.in  configure.ac
clutter/: Makefile.am  clutter-action-private.h  clutter-action.c  clutter-action.h  clutter-actor-meta-private.h  clutter-actor-meta.c  clutter-actor-meta.h  clutter-actor-private.h  clutter-actor.c  clutter-actor.h  clutter-align-constraint.c  clutter-alpha.c  clutter-animation.c  clutter-animator.c  clutter-animator.h  clutter-backend-private.h  clutter-backend.c  clutter-backend.h  clutter-bezier.c  clutter-bin-layout.c  clutter-bind-constraint.c  clutter-binding-pool.c  clutter-blur-effect.c  clutter-blur-effect.h  clutter-box-layout.c  clutter-box.c  clutter-cairo-texture.c  clutter-click-action.c  clutter-clone.c  clutter-cogl-compat.c  clutter-cogl-compat.h  clutter-cogl-material-compat.c  clutter-cogl-material-compat.h  clutter-color.c  clutter-color.h  clutter-deform-effect.c  clutter-deprecated.h  clutter-desaturate-effect.c  clutter-device-manager-private.h  clutter-drag-action.c  (+59 more)
clutter/cally/: cally-actor.c  cally-clone.c  cally-rectangle.c  cally-stage.c  cally-text.c  cally-texture.c  cally-util.c  cally.pc.in
clutter/cogl/: Makefile.am  clutter-backend-cogl.c  clutter-backend-cogl.h  clutter-stage-cogl.c  clutter-stage-cogl.h  cogl-shader.h
clutter/cogl/pango/: Makefile.am  cogl-pango-display-list.c  cogl-pango-glyph-cache.c  cogl-pango-render.c
clutter/deprecated/: clutter-rectangle.c
clutter/egl/: clutter-backend-egl.c  clutter-backend-eglnative.c  clutter-egl.h  clutter-stage-egl.c
clutter/evdev/: clutter-device-manager-evdev.c  clutter-evdev.h  clutter-input-device-evdev.c  clutter-input-device-evdev.h  clutter-xkb-utils.h
clutter/gdk/: clutter-device-manager-gdk.c  clutter-device-manager-gdk.h  clutter-stage-gdk.c
clutter/glx/: clutter-backend-glx.c  clutter-stage-glx.c  clutter-stage-glx.h
clutter/json/: Makefile.am
clutter/mir/: clutter-device-manager-mir.c  clutter-event-mir.c  clutter-mir.h  clutter-stage-mir.c  clutter-stage-mir.h
clutter/osx/: clutter-backend-osx.c
clutter/wayland/: clutter-backend-wayland.c  clutter-device-manager-wayland.c  clutter-device-manager-wayland.h  clutter-event-wayland.c  clutter-event-wayland.h  clutter-input-device-wayland.c  clutter-input-device-wayland.h  clutter-stage-wayland.c  clutter-wayland-surface.c
clutter/win32/: clutter-backend-win32.c
clutter/x11/: clutter-backend-x11.c  clutter-device-manager-xi2.c  clutter-keymap-x11.c  clutter-stage-x11.c  clutter-x11-texture-pixmap.c  clutter-x11.h  clutter-x11.pc.in
doc/reference/: clutter-sections.txt
po/: POTFILES.in  as.po  ast.po  be.po  bg.po  ca.po  ca@valencia.po  clutter-1.0.pot  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  fr.po  gl.po  hi.po  hu.po  id.po  it.po  kn.po  lt.po  lv.po  nb.po  nl.po  or.po  pa.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sr.po  sr@latin.po  sv.po  ta.po  te.po  tr.po  (+4 more)
tests/conform/: Makefile.am  actor-shader-effect.c  events-touch.c  test-cogl-materials.c  test-cogl-pixel-buffer.c  test-cogl-viewport.c  (+3 more)
(+36 files in other folders)
